--- a/Core/MapReduce.Core.csproj
+++ b/Core/MapReduce.Core.csproj
@@ -49,6 +49,7 @@
     <Compile Include="EnumerableExtensions.cs" />
     <Compile Include="MapReduce.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResourceTaskScheduler.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
