--- a/Tests/MapReduce.Tests.csproj
+++ b/Tests/MapReduce.Tests.csproj
@@ -57,6 +57,7 @@
     <Compile Include="FileWordTests.cs" />
     <Compile Include="MemoryTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SpeedTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core\MapReduce.Core.csproj">
@@ -65,6 +66,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\large.dat">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="App_Data\LoremIpsum_I.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
